typescript/checker/tests/conformance/es6/computedProperties/computedPropertyNamesDeclarationEmit3_ES6.ts.stderr
error: A computed property name in a class property declaration must refer to an expression whose type is a literal type or a 'unique symbol' type.
 --> $DIR/tests/conformance/es6/computedProperties/computedPropertyNamesDeclarationEmit3_ES6.ts:4:5
  |
4 |     ["" + ""](): void;
  |     ^^^^^^^^^^^^^^^^^^

